--- a/index.html
+++ b/index.html
@@ -415,8 +415,8 @@
       <h3>Connect with our experts</h3>
       <a href="#" class="btn btn-warning"> Get in touch</a>
     </section>
-    <footer class="pt-3 pb-3">
-      <div class="container">
+    <footer class="pt-4 pb-4">
+      <div class="container pl-0 pr-0">
         <div class="row">
           <div class="col-2">
             <h5>Services</h5>
@@ -433,7 +433,7 @@
             </ul>
           </div>
           <div class="col-2">
-            <h5>Services</h5>
+            <h5>Expertise</h5>
             <ul>
               <li><a href="#">Digital Transformation</a></li>
               <li><a href="#">Business Intelligence</a></li>
@@ -454,7 +454,7 @@
             </ul>
           </div>
           <div class="col-2">
-            <h5>Services</h5>
+            <h5>Industries</h5>
             <ul>
               <li><a href="#">FinTech</a></li>
               <li><a href="#">InsurTech</a></li>
@@ -474,7 +474,7 @@
             </ul>
           </div>
           <div class="col-2">
-            <h5>Services</h5>
+            <h5>Technologies</h5>
             <ul>
               <li><a href="#">Java</a></li>
               <li><a href="#">Scala</a></li>
@@ -494,15 +494,26 @@
             </ul>
           </div>
           <div class="col-2">
-            <h5>Services</h5>
+            <h5>Success Stories</h5>
             <ul>
               <li><a href="#">Clients</a></li>
               <li><a href="#">Case Studies</a></li>
               <li><a href="#">Articles</a></li>
             </ul>
+            <div class="footer_contacts">
+              <h5>Call us at:</h5>
+              <a href="#" class="tel_num">+380 322 295 767</a>
+              <h5>Follow us on</h5>
+              <div class="social">
+                <a href="#" class="social_link"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="social_link"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#" class="social_link"><i class="fab fa-google-plus-g"></i></a>
+                <a href="#" class="social_link"><i class="fab fa-facebook-f"></i></a>
+              </div>
+            </div>
           </div>
           <div class="col-2">
-            <h5>Services</h5>
+            <h5>Company</h5>
             <ul>
               <li><a href="#">Company Overview</a></li>
               <li><a href="#">Industry Recognition</a></li>
@@ -511,6 +522,73 @@
             </ul>
           </div>
 
+        </div>
+        <div class="articles">
+          <h5>
+            Latest in Blog:
+          </h5>
+          <div class="footer_slider">
+
+            <a href="#" class="article_link">
+              <div class="date">
+                Nov<br>15
+              </div>
+              <div class="title">
+                <h6>29 facts about outsourced software engineering in Eastern Europe</h6>
+              </div>
+            </a>
+            <a href="#" class="article_link">
+              <div class="date">
+                Nov<br>15
+              </div>
+              <div class="title">
+                <h6>29 facts about outsourced software engineering in Eastern Europe</h6>
+              </div>
+            </a>
+            <a href="#" class="article_link">
+              <div class="date">
+                Nov<br>15
+              </div>
+              <div class="title">
+                <h6>29 facts about outsourced software engineering in Eastern Europe</h6>
+              </div>
+            </a>
+            <a href="#" class="article_link">
+              <div class="date">
+                Nov<br>15
+              </div>
+              <div class="title">
+                <h6>29 facts about outsourced software engineering in Eastern Europe</h6>
+              </div>
+            </a>
+            <a href="#" class="article_link">
+              <div class="date">
+                Nov<br>15
+              </div>
+              <div class="title">
+                <h6>29 facts about outsourced software engineering in Eastern Europe</h6>
+              </div>
+            </a>
+            <a href="#" class="article_link">
+              <div class="date">
+                Nov<br>15
+              </div>
+              <div class="title">
+                <h6>29 facts about outsourced software engineering in Eastern Europe</h6>
+              </div>
+            </a>
+            <a href="#" class="article_link">
+              <div class="date">
+                Nov<br>15
+              </div>
+              <div class="title">
+                <h6>29 facts about outsourced software engineering in Eastern Europe</h6>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="copyright">
+          Copyright © 2002 - 2018 N-iX LLC
         </div>
       </div>
     </footer>
